Added more info to body

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
    Link to Raspberry Pi's offical website: <a href="http://www.raspberrypi.org">raspberrypi.org</a>.
   </p>
   <p>
-<DIV style="position: absolute; top:200px; left:100px;  width:80%; height:1000px; background-color:blue;">
-Hello, like the changes I made? Eh? Wanna see all my messy HTML (code), I put code in brackets because HTML is a pretty n00by programming language, if it is even one at that.
+
+<DIV style="position: absolute; top:200px; left:10%;  width:80%; height:1000px; background-color:white;">
+Hello, like the changes I made? Eh? Wanna see all my messy HTML (code), I put code in brackets because HTML is a pretty n00by programming language, if it is even one at that. But anyway, here's a GitHub link to my source code and images, all original, made by me. <a href="https://github.com/1sammy/Website">GitHub.com</a>. 
 </DIV>
 
   </p>
