--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
   </p>
   <p>
 
-<DIV style="position: absolute; top:200px; left:10%;  width:80%; height:1000px; background-color:white;">
+<DIV style="position: absolute; top:200px; left:10%;  width:80%; height:1000px; padding:20px; background-color:LightSkyBlue;">
 Hello, like the changes I made? Eh? Wanna see all my messy HTML (code), I put code in brackets because HTML is a pretty n00by programming language, if it is even one at that. But anyway, here's a GitHub link to my source code and images, all original, made by me. <a href="https://github.com/1sammy/Website">GitHub.com</a>. 
+<nav>
+<ul>
+Pages on this website: <br/>
+<li><a href="contact.html">Q/C/A Contact</a></li>
+<li><a href="tutorials.html">Tutorials</a></li>
+<li><a href="funnystuff.html">Funny Stuff</a></li>
+</ul>
+</nav>
 </DIV>
 
   </p>
