Added pictures to funny stuff page

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
+<center>
+<body background="bkg.jpg">
 
 <h2>Comments, questions or concerns page.</h2>
 
@@ -9,11 +10,12 @@ Your Name:<br>
 <input type="text" name="name" value=""><br>
 Your E-mail:<br>
 <input type="text" name="mail" value=""><br>
-Your Comment:<br>
+Your Comment, Question or Concern:<br>
 <input type="text" name="comment" value="" size="150"><br><br>
 <input type="submit" value="Send">
 </form>
 
 </body>
+</center>
 </html>
 
