--- a/funnystuff.html
+++ b/funnystuff.html
@@ -1,3 +1,32 @@
 <html>
+<body background="bkg.jpg">
 <title>Sam's Pi - Funny Stuff</title>
-<h1>Nothing here, yet!</h1>
+<center>
+<h1>All the nerdy, funny stuff you could ever want!</h1>
+<p>
+<br/>
+<img src="fanboys.jpg" style="width:588px;height:430px;">
+<br/>
+<img src="imalinux.jpg" style="width:479px;height:648px;">
+<br/>
+<img src="appletax.jpg" style="width:604px;height:597px;">
+<br/>
+<img src="windowstablet.gif" style="width:673;height:553;">
+<br/>
+<img src="wallemac.png" style="width:511;height:388">
+<br/>
+<img src="whatyouget.jpg" style="width:780;height:440">
+<br/>
+<img src="macrelease.jpg" style="width:1200;height:1290">
+<br/>
+<img src="imvista.jpg" style="width:535;height:292;">
+<br/>
+<img src="linuxknife.jpg" style="width:1197;height:477">
+<br/>
+<img src="custompcporn.jpg" style="width:900;height:771;">
+<br/>
+<img src="candoanything.jpg" style="width:600;height:276;">
+
+
+</center>
+</body>
