--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <DIV style="position: absolute; top:200px; left:10%;  width:80%; height:1000px; padding:20px; background-color:LightSkyBlue;">
 Hello, like the changes I made? Eh? Wanna see all my messy HTML (code), I put code in brackets because HTML is a pretty n00by programming language, if it is even one at that. But anyway, here's a GitHub link to my source code and images, all original, made by me. <a href="https://github.com/1sammy/Website">GitHub.com</a>. 
+And here is a link to Mr. DJ505's website: <a href="https://dj505gaming.wordpress.com/">DJ505.com</a>
 <nav>
 <ul>
 Pages on this website: <br/>
