--- a/tutorials.html
+++ b/tutorials.html
@@ -1,3 +1,9 @@
 <html>
 <title>Sam's Pi - Tutorials</title>
 <h1> Nothing here, yet!</h1>
+<body>
+<p> Although there may be nothing here yet, I am currently writing a tutorial on how to make a server just like this, on your Raspberry Pi, from scratch!
+<br/>
+While you are waiting... go here:
+<a href="http://bit.ly/IqT6zt"> You won't regret it!</a>
+</p>
